--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Aquí vamos a hacer un blog post</h1>
+        <h1>Aquí vamos a hacer un blog post2</h1>
         <p>Y éste es el párrafo del inicio</p>
     </body>
 </hmtl>
