finalzada la cabecerachocolate

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <hmtl>
 
     <head>
-        <tittle>Título del post</tittle>
+        <tittle>Título cabecera</tittle>
         <link rel="styleSheet" href="css/estilos.css">
     </head>
 
