finalzada la master

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Aquí vamos a hacer un blog post2</h1>
         <p>Y éste es el párrafo del inicio</p>
+        <p>vamos a ver si funciona ahha</p>
     </body>
 </hmtl>
