--- a/blogpost.html
+++ b/blogpost.html
@@ -9,5 +9,6 @@
         <h1>Aquí vamos a hacer un blog post2</h1>
         <p>Y éste es el párrafo del inicio</p>
         <p>vamos a ver si funciona ahha</p>
+        <p>vamos a ver si funciona el remoto ssh ahha</p>
     </body>
 </hmtl>
