--- a/blogpost.html
+++ b/blogpost.html
@@ -10,5 +10,6 @@
         <p>Y éste es el párrafo del inicio</p>
         <p>vamos a ver si funciona ahha</p>
         <p>vamos a ver si funciona el remoto ssh ahha</p>
+        <p>prueba pull</p>
     </body>
 </hmtl>
